# large_image_pring

./: .gitignore  CMakeLists.txt
framework/: CMakeLists.txt  LIS_bitmap_loader_raw.cpp  LIS_bitmap_loader_raw.hpp  bounding_area_hierarchie.cpp  bounding_area_hierarchie.hpp  transfer_function.cpp  utils.cpp  utils.hpp
source/: CMakeLists.txt  LIS_experiment_main.cpp
source/shader/: LIS_transform_result.cu  LIS_transform_result.frag  LIS_transform_result.vert  LIS_view_buffer.frag  volume.frag
